--- a/SharpDXPingPong/SharpDXPingPong/SharpDXPingPong.csproj
+++ b/SharpDXPingPong/SharpDXPingPong/SharpDXPingPong.csproj
@@ -69,6 +69,11 @@
     <Compile Include="Components\BallComponent.cs" />
     <Compile Include="Components\PadComponent.cs" />
     <Compile Include="Components\PlaneComponent.cs" />
+    <Compile Include="Components\TexturedQuadComponent.cs" />
+    <Compile Include="Components\WarpZone\BallSpeedDown.cs" />
+    <Compile Include="Components\WarpZone\BallSpeedUp.cs" />
+    <Compile Include="Components\WarpZone\LongPad.cs" />
+    <Compile Include="Components\WarpZone\WarpComponent.cs" />
     <Compile Include="Controllers\PadController.cs" />
     <Compile Include="PingPongGame.cs" />
     <Compile Include="Program.cs" />
@@ -90,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Proj.hlsl" />
+    <Content Include="Shader.hlsl" />
     <Content Include="Simple.hlsl" />
     <Content Include="TexturedShader.hlsl" />
   </ItemGroup>
